<resources>
    <string name="app_name">DMI</string>
    <string name="title_activity_dmi">DMI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="doctorflname">Dr Souleymane Barry</string>
    <string name="speciality">Spécialité</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profil</string>
    <string name="account">Compte</string>
    <string name="disconnect">Deconnecter</string>
    <string name="myencounters">Visites</string>
    <string name="service">Service</string>
    <string name="mypatients">Mes Patients</string>
    <string name="menu_tappointments">Rendez-vous</string>
    <string name="dmi">Digital Medical Initiative</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="acocunt">Compte</string>
    <string name="dmi_papss">DMI PAPSS</string>
    <string name="programme_d_am_lioration_de_la_performance_du_syst_me_de_sant">Programme d\'Amélioration de la Performance du Système de Santé</string>
    <string name="pr">Pr</string>
    <string name="dr">Dr</string>
    <string name="mr">Mr</string>
    <string name="mst">Mme</string>
    <string name="mss">Mlle</string>
    <string name="other">Autre</string>
    <string name="otherBehaviors">Autre Habitudes</string>
    <string name="unknown">Inc</string>
    <string name="underterminated">Indeterminé</string>
    <string name="physist">Médecin</string>
    <string name="pharmacist">Pharmacien</string>
    <string name="nurse">Infirmier/er</string>
    <string name="agent">Agent/e</string>
    <string name="reporter">Agent DMI</string>
    <string name="labtech">Technicien de Laboratoire</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom de Famille</string>
    <string name="phone">Téléphone</string>
    <string name="dob">Date de Naissance</string>
    <string name="pob">Lieu de Naissance</string>
    <string name="matricule">Numéro de Dossier</string>
    <string name="blood_group">Groupe Sanguin</string>
    <string name="main_disease">Maladie Principale</string>
    <string name="sex">Sexe</string>
    <string name="status">S. Matrimonial</string>
    <string name="job">Profession</string>
    <string name="adress">Adresse</string>
    <string name="contactperson">Personne Contact  en Urgence</string>
    <string name="mobile">Cellulaire</string>
    <string name="fix">Fixe</string>
    <string name="phone2">Deuxieme Tel</string>
    <string name="phone1">Premier Tel</string>
    <string name="retired">Retraité</string>
    <string name="ipres">IPRES</string>
    <string name="fnr">FNR</string>
    <string name="official">Fonctionnaire</string>
    <string name="surgery">Opéré/e</string>
    <string name="idm">Infarctus du Myocard</string>
    <string name="cva">AVC</string>
    <string name="falls">Chutes</string>
    <string name="long_terme_treatment">Traitement au long cours</string>
    <string name="notes">Notes</string>
    <string name="allergy">Allergies</string>
    <string name="goutte">Goutte</string>
    <string name="dementia">Demence</string>
    <string name="hta">HTA</string>
    <string name="irc">IRC</string>
    <string name="ashmatic">Asthmatique</string>
    <string name="diabetes">Diabète</string>
    <string name="glaucoma">Glaucome</string>
    <string name="hepatitis">Hépatite B</string>
    <string name="hyperthyroidism">Hyperthyroidie</string>
    <string name="others">Autres</string>
    <string name="menopause">Ménaupause</string>
    <string name="gsrh">Groupe Sanguin et Rhésus</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="orther">A</string>
    <string name="single">Célibataire</string>
    <string name="married">Marié</string>
    <string name="divorced">Divorcé</string>
    <string name="widow">Veuf/ve</string>
    <string name="patient">Patient</string>
    <string name="pressure">Tension Artérielle</string>
    <string name="temperature">Température</string>
    <string name="weight">Poids</string>
    <string name="gaj">Glycémie</string>
    <string name="height">Taille</string>
    <string name="waistSize">Tour Taille</string>
    <string name="resprate">F.Respiratoire.</string>
    <string name="heartrate">F. Cardiaque</string>
    <string name="annorexia">Anorexie</string>
    <string name="asthenia">Asthénie</string>
    <string name="omi">OMI</string>
    <string name="dyspnea">Dysphnée</string>
    <string name="apathy">Apathie</string>
    <string name="emaciation">Amaigrissement</string>
    <string name="autonomy">Autonomie</string>
    <string name="spaceorientation">Or. Temporo-Spatiale</string>
    <string name="field">Terrain</string>
    <string name="smoking">Tabagisme</string>
    <string name="ethylism">Ethylisme</string>
    <string name="tea">Thé</string>
    <string name="running_treatment">Traitement en cours</string>
    <string name="duration">Durée</string>
    <string name="existinglabs">Bilans (Faits/À Faire)</string>
    <string name="advisings">Conseils Hygieno-diethétiques</string>
    <string name="diabetic_diet">Régime Diabétique</string>
    <string name="hypocaloric_diet">Régime Hypocalorique</string>
    <string name="hyposode">Régime Hyposode</string>
    <string name="hyperprotidic">Régime Hyperprotidique</string>
    <string name="diet">Régime</string>
    <string name="cmhg">cmHg</string>
    <string name="dc">°C</string>
    <string name="kg">Kg</string>
    <string name="mgpdl">mg/dl</string>
    <string name="body_part">Partie du Corps</string>
    <string name="state">État</string>
    <string name="cm">cm</string>
    <string name="respmn">resp/mn</string>
    <string name="batpmn">bat/mn</string>
    <string name="cupperday">Tas./J</string>
    <string name="gcupperday">Ver./J</string>
    <string name="cigperday">Cig./J</string>
    <string name="smokedcigretperday">Nombre de cigarettes par jour</string>
    <string name="drunkcupperday">Nombre de verres bus par jour</string>
    <string name="drunktassperday">Nombre de tasses bues par jour</string>
    <string name="traitmentduration">Durée de Traitement</string>
    <string name="weeks">Semaines</string>
    <string name="resprate_long">Fréquence Respiratoire</string>
    <string name="heartrate_long">Fréquence Cardiaque</string>
    <string name="hematology">Hématologie</string>
    <string name="bacteriology">Bactériologie</string>
    <string name="serology">Sérologie</string>
    <string name="biochemistry">Biochimie</string>
    <string name="otherlab">Autre analyse</string>
    <string name="newLabs">Nouveau Bilan</string>
    <string name="line_up">Liste d\'attente</string>
    <string name="new_encounter">Nouv. Visite</string>
    <string name="summary">Résumé</string>
    <string name="encounter">Visite</string>
    <string name="patient_files">Dossier Patient</string>
    <string name="shouldNotbeBlank">Ne doit pas être vide</string>
    <string name="edit">Editer</string>
    <string name="save">Sauver</string>
    <string name="epilepsy">Épilepsie</string>
    <string name="aplus">A+</string>
    <string name="bplus">B+</string>
    <string name="abplus">AB+</string>
    <string name="oplus">O+</string>
    <string name="aminus">A-</string>
    <string name="bminus">B-</string>
    <string name="abminus">AB-</string>
    <string name="ominus">O-</string>
    <string name="date">Date du Rendez-Vous</string>
    <string name="unknown_error">Erreur Inconue</string>
    <string name="dob_pob">Age et Lieu de Naissance</string>
    <string name="nurses">Infirmiers/eres</string>
    <string name="physiscians">Medecins</string>
    <string name="supervised_visits">Visite superviées</string>
    <string name="patient_search">Recherche de Patients</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="passwordConfirmation">Confirmation mot de passe</string>
    <string name="not_matching">Les deux mots de passe ne correspondent pas</string>
    <string name="confirm_logout">Voulez-vous vous deconnecter ?</string>
    <string name="logout">Demande de Deconnexion</string>
    <string name="title">Titre</string>
    <string name="name"><![CDATA[Titre Nom & Prénom]]></string>
    <string name="type">Type</string>
    <string name="supervise_patients">Patients Suivis</string>
    <string name="reviewed_encounters">Visite à Valider</string>
    <string name="my_patient">Mes Patients</string>
    <string name="new_physician">Nouveau Médecin</string>
    <string name="edit_physician">Éditer un Médecin</string>
    <string name="new_nurse">Nouveeau/lle Infirmier/e</string>
    <string name="edit_nurse">Editer un/e Infimier/e</string>
    <string name="need_following_permission">L\'application EcoSanté a besoin des autorisations</string>
    <string name="medication">Médicament</string>
    <string name="drug">Médicament</string>
    <string name="direction">Posologie</string>
    <string name="starting_date">Date de début</string>
    <string name="renewal"># Renouv.</string>
    <string name="prescription">Prescriptions/Medicaments</string>
    <string name="done">Effectué</string>
    <string name="todo">À faire</string>
    <string name="new_med">Nouveau</string>
    <string name="running">En Cours</string>
    <string name="terminated">Terminé</string>
    <string name="finished_at">Terminé le</string>
    <string name="terminate_at">Terminé le</string>
    <string name="running_since">En cours dépuis</string>
    <string name="prescribed">Préscrit</string>
    <string name="docs">Documents</string>
    <string name="newDoc">Nouveau Document</string>
    <string name="choose_file">Choisir un fichier</string>
    <string name="admin">Administrateur</string>
    <string name="search">Rechercher un patient</string>
    <string name="avc">Avc</string>
    <string name="avc_victim">À été victime d\'un AVC</string>
    <string name="suffer_of_diabet">Souffre du diabète</string>
    <string name="suffer_of_epilepsia">Souffre d\'épilepsie</string>
    <string name="suffer_of_asthma">Souffre d\'asthme</string>
    <string name="suffer_of_hta">Souffre d\'hypertension arterielle</string>
    <string name="falciform">Drépanocytose</string>
    <string name="percentage">Pourcentage (%)</string>
    <string name="diag_date">Date diagnostique</string>
    <string name="has_falciform">Souffre de drépanocytose</string>
    <string name="object">Object du Rendez-Vous</string>
    <string name="place">Lieux de Rendez-Vous</string>
    <string name="datetime">Date et Heure</string>
    <string name="time">Heure</string>
    <string name="myappointments">Rendez-Vous</string>
    <string name="select_date">Choisir la Date</string>
    <string name="select_time">Choisir l\'Heure</string>
    <string name="details">Note Attachée</string>
    <string name="appointment_time">Heure de Rendez-Vous</string>
    <string name="appointment_list">Agenda</string>
    <string name="oldpassword">Ancien Mot de Passe</string>
    <string name="supervised_nurses">Infirmiers Supervisés</string>
    <string name="archived">Archivés</string>
    <string name="availability">Disponibilité</string>
    <string name="supervisors">Superviseurs</string>
    <string name="district">Zone</string>
    <string name="districts">Zones</string>
    <string name="visits">Visites</string>
    <string name="unassigned">Non Assignés</string>
    <string name="waiting">En Attente</string>
    <string name="treated">Traitées</string>
</resources>