<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/user_menu">
        <item
            android:checkable="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_user_appointments"
            android:icon="@drawable/appointment"
            android:title="@string/myappointments" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_user_patients"
            android:icon="@drawable/waiting"
            android:title="@string/mypatients" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_user_visits"
            android:icon="@drawable/encounter"
            android:title="@string/myencounters" />

    </group>

    <group android:id="@+id/nurse_menu">
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_nurs_distric"
            android:icon="@drawable/district"
            android:title="@string/district" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_supervisors"
            android:icon="@drawable/phys"
            android:title="@string/supervisors" />

    </group>


    <group android:id="@+id/physician_menu">
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_supervised_nurses"
            android:icon="@drawable/nurses"
            android:title="@string/supervised_nurses" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_supervised_visits"
            android:icon="@drawable/encounters"
            android:title="@string/supervised_visits" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_supervised_patients"
            android:icon="@drawable/patient"
            android:title="@string/supervise_patients" />

    </group>
    <group android:id="@+id/adminmenu">
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_my_districs"
            android:icon="@drawable/district"
            android:title="@string/districts" />

        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_admin_physicians"
            android:icon="@drawable/physicians"
            android:title="@string/physiscians" />
        <item
            app:actionLayout="@layout/badge"
            android:checkable="true"
            android:id="@+id/nav_admin_nurses"
            android:icon="@drawable/nurses"
            android:title="@string/nurses" />

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
            <item
                android:checkable="true"
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/shutdown"
                android:title="@string/disconnect" />
        </menu>
    </item>

    <item android:title="@string/availability">
        <menu>
            <item
                android:checkable="true"
                app:actionLayout="@layout/switch_availability"
                android:id="@+id/nav_available"
                android:title="" />

        </menu>
    </item>

</menu>
