<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pending"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/in_progress"
        android:title="@string/waiting"
        app:showAsAction="always"/>
    <item
        android:id="@+id/treated"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/accept"
        android:title="@string/treated"
        app:showAsAction="always"/>


    <item
        android:checkable="true"
        android:id="@+id/archive"
        android:enabled="true"
        android:icon="@drawable/arch"
        android:title="@string/archived"
        app:showAsAction="always"/>
    <item
        android:id="@+id/unassigned"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/district"
        android:title="@string/unassigned"
        app:showAsAction="always"/>

</menu>