<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorAccent"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/nav_header_dmi"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_alignParentTop="true"
        android:id="@+id/imageViewHeader"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/imageViewHeader"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvClusterName"
            style="@style/TextView.InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="KamitMed" />

        <TextView
            android:id="@+id/tvDistrictName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingBottom="7dp"
            android:textColor="@color/colorPrimary"
            android:text="Guediaway" />


    </LinearLayout>



    <TextView
        android:layout_below="@id/imageViewHeader"
        android:id="@+id/textViewPhysistFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/doctorflname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:layout_below="@id/textViewPhysistFullName"
        android:id="@+id/textViewPhysistSpeciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/speciality" />

</RelativeLayout>
