<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/userCredentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="4dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldpasswordContainer"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/oldpassword">

                <EditText
                    android:id="@+id/oldpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/passwordsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/oldpasswordContainer"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/passwordContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password">

                    <EditText
                        android:id="@+id/passwordNew"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:text="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordContainer"
                    android:layout_weight="1"
                    android:hint="@string/passwordConfirmation">

                    <EditText
                        android:id="@+id/passwordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:text="pw4Fadel" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

